--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>EGTT ATC Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.amaran/0.5.4/amaran.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -1442,6 +1443,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.1.4/dist/js/tabulator.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.amaran/0.5.4/jquery.amaran.min.js"></script>
   <script src="js/index.js"></script>
 
 </body>
